[package]
name = "solana-rpc-tower"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.82"
futures = "0.3.30"
reqwest = "0.11"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
solana-client = "2.0.10"
solana-rpc-client = "2.0.10"
solana-sdk = "2.0.10"
solana-version = "2.0.10"
tokio = "1.40.0"
tower = { version = "0.5.1", features = ["full"] }
tracing = "0.1.40"

[dev-dependencies]
crossbeam-channel = "0.5.13"
jsonrpc-core = "18.0.0"
jsonrpc-http-server = "18.0.0"
solana-transaction-status = "2.0.10"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[[examples]]
name = "basic"

[[examples]]
name = "builder"

[[examples]]
name = "concurrency_limit"

[[examples]]
name = "filter"

[[examples]]
name = "rate_limit"

[[examples]]
name = "with_fn"

